# poker-tournament-backend

./: .gitignore  Makefile  README.md  func1.py  hello.py  main.py  pyproject.toml
deploy_config/: README.md  certified_nginx_block.conf  fastapi.service  nginx_block.conf
sample_code/: README.md  hello.cpp  sample1.py  template.py
skeleton_files/: bot_code.cpp  bot_code.py  game_input_format.md  helpers.py  skeleton.cpp  skeleton.py
src/: admin.py  auth.py  game.py  main.py  models.py  submission.py  submit.py  supabase_client.py  user.py
src/core/: broadcasting.py  card.py  engine.py  hand.py  matchmaking.py  player.py  signaling.py  table.py  tournament.py  update.py
src/test_data/: file_1.txt
src/util/: auth.py  helpers.py  models.py
tests/: chunking.py  denominations.py  execution.py  test_broadcasting.py  test_hand.py  test_hand_v2.py  test_matchmaking.py  test_player.py  test_retabling.py  test_table.py  test_ws.py
