[project]
name = "poker-backend-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "ruff>=0.12.7",
    "websockets>=15.0.1",
]
